--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-
 <body>
     <header>
         <nav>
@@ -62,4 +59,40 @@
     </footer>
 </body>
 
+</html>
+
+<h1>Форма зворотнього звязку</h1>
+<form action="" method="POST">
+    <div>
+        <label for="">first name</label>
+        <input type="text">
+    </div>
+    <div>
+        <label for="">second name</label>
+        <input type="text">
+    </div>
+    <div>
+        <label for="">phone number</label>
+        <input type="text" name="" id="">
+    </div>
+    <div>
+        <input type="checkbox" name="" id="">remember me
+    </div>
+    <div>
+        <p>sex</p>
+        <input type="radio" name="" id="">male
+        <input type="radio" name="" id="">female
+    </div>
+    <div>
+        <p>city</p>
+        <select>
+            <option>львів</option>
+            <option>київ</option>
+            <option>харків</option>
+            <option>одеса</option>
+        </select>
+    </div>
+    <button type="submit"></button>
+</form>
+</body>
 </html>
